added installer data in